--- a/employee.html
+++ b/employee.html
@@ -177,90 +177,6 @@
       font-size: 16px;
       font-weight: bold;
     }
-    /* واجهة المحادثة */
-    .chat-top-bar {
-      display: flex;
-      align-items: center;
-      background: #f1f1f1;
-      padding: 10px;
-      border-bottom: 1px solid #ddd;
-    }
-    .chat-logo {
-      width: 30px;
-      height: 30px;
-      border-radius: 50%;
-      margin-left: 10px;
-    }
-    .mulberry-ceo {
-      font-weight: bold;
-      margin-right: 10px;
-      background: linear-gradient(to right, blue, purple);
-      -webkit-background-clip: text;
-      color: transparent;
-    }
-    .chat-area {
-      height: 400px;
-      overflow-y: auto;
-      background: rgba(255,255,255,0.8);
-      padding: 10px;
-      border-radius: 8px;
-      margin-bottom: 10px;
-      transition: height 0.3s ease;
-    }
-    .chat-bottom-bar {
-      display: flex;
-      padding: 10px;
-      border-top: 1px solid #ddd;
-    }
-    .chat-bottom-bar input[type="text"] {
-      flex: 1;
-      padding: 10px;
-      border: 1px solid #ccc;
-      border-radius: 20px;
-      margin-right: 10px;
-      transition: border 0.3s ease;
-    }
-    .chat-bottom-bar input[type="text"]:focus {
-      border-color: #3498db;
-      outline: none;
-    }
-    .chat-bottom-bar button {
-      background: transparent;
-      border: none;
-      cursor: pointer;
-      font-size: 20px;
-      transition: transform 0.3s ease;
-    }
-    .chat-bottom-bar button:hover {
-      transform: scale(1.1);
-    }
-    .chat-bubble {
-      max-width: 70%;
-      padding: 10px;
-      border-radius: 10px;
-      margin-bottom: 10px;
-      position: relative;
-      clear: both;
-      word-wrap: break-word;
-    }
-    .chat-bubble.employee {
-      background: #27ae60;
-      color: #fff;
-      margin-right: auto;
-    }
-    .chat-bubble.admin {
-      background: #fff;
-      color: #000;
-      border: 1px solid #ddd;
-      margin-left: auto;
-      padding-left: 50px;
-      position: relative;
-    }
-    .chat-bubble.admin .admin-name {
-      font-weight: bold;
-      margin-bottom: 5px;
-      display: block;
-    }
     /* واجهة الإعدادات */
     .account-settings {
       padding: 20px;
@@ -307,7 +223,6 @@
       .container { padding: 20px; }
       .header { flex-direction: column; align-items: flex-start; }
       .logout-btn { width: 100%; text-align: center; }
-      .chat-area { height: 200px; }
       .tab-nav button { font-size: 14px; }
     }
   </style>
@@ -330,7 +245,7 @@
     <!-- قائمة الألسنة مع زر الترجمة -->
     <div class="tab-nav">
       <button id="tabAnalyticsBtn" class="active" onclick="showEmployeeTab('analytics', event)">تحليلات</button>
-      <button id="tabConversationBtn" onclick="showEmployeeTab('conversation', event)">المحادثة</button>
+      <!-- تم حذف قسم المحادثة -->
       <button id="tabSettingsBtn" onclick="showEmployeeTab('settings', event)">الإعدادات</button>
       <button id="langToggleTab" onclick="toggleLanguage()"><i class="fas fa-language"></i></button>
     </div>
@@ -367,25 +282,6 @@
         <!-- يتم تحميل جدول المبيعات هنا -->
       </div>
       <div class="sales-summary" id="salesSummary"></div>
-    </div>
-    
-    <!-- واجهة المحادثة -->
-    <div id="conversation" class="employee-tab" style="display: none;">
-      <div class="chat-top-bar">
-        <!-- تم تحديث مصدر الصورة بالشعار المطلوب -->
-        <img src="https://scontent.fjrs28-1.fna.fbcdn.net/v/t39.30808-6/471747354_122099892014715775_3226043878643219535_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=t1gVfldlQs4Q7kNvgGDhTwg&_nc_oc=Adj0VbX8fv5yoPOdcsjqBL9GNIy4ajjpj6ddcQiOZum3vh9Vz72RYBuXGIFZJ0cdf34&_nc_zt=23&_nc_ht=scontent.fjrs28-1.fna&_nc_gid=Aw0_luP-m6BerF-SDLx7OJF&oh=00_AYDEd-33HfeXo4ClgaEd0Yr3tf-Z2PK4zUHMs6G-twOXKQ&oe=67CB1665" class="chat-logo" alt="الشعار">
-        <span id="chatHeader">التواصل مع الشركة الأم</span>
-        <span class="mulberry-ceo">Mulberry-CEO</span>
-      </div>
-      <div class="chat-area">
-        <div id="employeeChatMessages">
-          <!-- تحميل رسائل المحادثة -->
-        </div>
-      </div>
-      <div class="chat-bottom-bar">
-        <input type="text" id="employeeChatInput" placeholder="اكتب رسالتك...">
-        <button onclick="sendEmployeeChatMessage()"><i class="send-icon">✈️</i></button>
-      </div>
     </div>
     
     <!-- واجهة الإعدادات -->
@@ -428,7 +324,6 @@
         welcome: "أهلاً, ",
         logout: "تسجيل الخروج",
         tabAnalytics: "تحليلات",
-        tabConversation: "المحادثة",
         tabSettings: "الإعدادات",
         filterLabel: "تصفية المبيعات حسب:",
         radioDay: "يوم",
@@ -441,8 +336,6 @@
           date: "التاريخ"
         },
         salesSummary: (totalSales, totalProfit) => `إجمالي المبيعات: ${totalSales} | إجمالي الأرباح: ₪${totalProfit}`,
-        chatHeader: "التواصل مع الشركة الأم",
-        supportName: "الدعم الفني",
         settingsHeader: "إعدادات الحساب",
         changeUsername: "تغيير اسم المستخدم:",
         changePassword: "تغيير كلمة المرور:",
@@ -456,7 +349,6 @@
         welcome: "Welcome, ",
         logout: "Logout",
         tabAnalytics: "Analytics",
-        tabConversation: "Conversation",
         tabSettings: "Settings",
         filterLabel: "Filter Sales By:",
         radioDay: "Day",
@@ -469,8 +361,6 @@
           date: "Date"
         },
         salesSummary: (totalSales, totalProfit) => `Total Sales: ${totalSales} | Total Profit: ₪${totalProfit}`,
-        chatHeader: "Communication with Parent Company",
-        supportName: "Technical Support",
         settingsHeader: "Account Settings",
         changeUsername: "Change Username:",
         changePassword: "Change Password:",
@@ -494,25 +384,19 @@
       document.getElementById('employeeNameDisplay').textContent = translations[currentLanguage].welcome + employeeName;
       document.querySelector('.logout-btn').textContent = translations[currentLanguage].logout;
       document.getElementById('tabAnalyticsBtn').textContent = translations[currentLanguage].tabAnalytics;
-      document.getElementById('tabConversationBtn').textContent = translations[currentLanguage].tabConversation;
       document.getElementById('tabSettingsBtn').textContent = translations[currentLanguage].tabSettings;
       document.getElementById('filterLabel').textContent = translations[currentLanguage].filterLabel;
       document.getElementById('radioDayLabel').innerHTML = `<input type="radio" name="filterType" value="day" checked onclick="toggleFilterInputs('day')"> ${translations[currentLanguage].radioDay}`;
       document.getElementById('radioMonthLabel').innerHTML = `<input type="radio" name="filterType" value="month" onclick="toggleFilterInputs('month')"> ${translations[currentLanguage].radioMonth}`;
       document.getElementById('radioPeriodLabel').innerHTML = `<input type="radio" name="filterType" value="period" onclick="toggleFilterInputs('period')"> ${translations[currentLanguage].radioPeriod}`;
       document.getElementById('salesHeader').textContent = translations[currentLanguage].salesHeader;
-      document.getElementById('chatHeader').textContent = translations[currentLanguage].chatHeader;
       document.getElementById('settingsHeader').textContent = translations[currentLanguage].settingsHeader;
       document.getElementById('usernameLabel').textContent = translations[currentLanguage].changeUsername;
       document.getElementById('passwordLabel').textContent = translations[currentLanguage].changePassword;
       document.getElementById('photoLabel').textContent = translations[currentLanguage].changePhoto;
       document.getElementById('updateSettingsBtn').textContent = translations[currentLanguage].updateSettings;
-      document.getElementById('employeeChatInput').setAttribute("placeholder", translations[currentLanguage].chatInputPlaceholder);
     }
     updateStaticTexts();
-
-    // متغير لتحديد نص الدعم الفني في المحادثة
-    let supportNameText = translations[currentLanguage].supportName;
 
     // استرجاع تعيينات البائع المميز
     let topSellerDesignations = {};
@@ -630,49 +514,6 @@
     }
     loadEmployeePhoto();
 
-    /* ------------------ واجهة المحادثة ------------------ */
-    function loadEmployeeChatMessages() {
-      const currentEmployeeUsername = localStorage.getItem('employeeUsername');
-      database.ref('conversation').orderByChild('date').on('value', snapshot => {
-        const messagesData = snapshot.val() || {};
-        let chatHTML = "";
-        for (const key in messagesData) {
-          const msg = messagesData[key];
-          // التأكد من مطابقة الرسالة للموظف الحالي
-          if (msg.employeeUsername !== currentEmployeeUsername) continue;
-          if (msg.sender === "admin") {
-            chatHTML += `<div class="chat-bubble admin">
-              <span class="admin-name">${translations[currentLanguage].supportName}</span>
-              <span>${msg.message}</span>
-              <div style="font-size:10px;">${new Date(msg.date).toLocaleTimeString()}</div>
-              </div>`;
-          } else {
-            chatHTML += `<div class="chat-bubble employee">
-              <span>${msg.message}</span>
-              <div style="font-size:10px; text-align:right;">${new Date(msg.date).toLocaleTimeString()}</div>
-              </div>`;
-          }
-        }
-        document.getElementById('employeeChatMessages').innerHTML = chatHTML;
-        document.querySelector('.chat-area').scrollTop = document.querySelector('.chat-area').scrollHeight;
-      });
-    }
-    loadEmployeeChatMessages();
-
-    function sendEmployeeChatMessage() {
-      const input = document.getElementById('employeeChatInput');
-      const text = input.value.trim();
-      if (!text) return;
-      const messageData = {
-        sender: "employee",
-        employeeUsername: localStorage.getItem('employeeUsername'),
-        message: text,
-        date: new Date().toISOString()
-      };
-      database.ref('conversation').push(messageData)
-      .then(() => { input.value = ""; });
-    }
-
     /* ------------------ واجهة الإعدادات ------------------ */
     function updateAccountSettings() {
       const newUsername = document.getElementById('accUsername').value.trim();
@@ -741,9 +582,7 @@
     function toggleLanguage() {
       currentLanguage = currentLanguage === 'ar' ? 'en' : 'ar';
       updateStaticTexts();
-      supportNameText = translations[currentLanguage].supportName;
       loadSalesData();
-      loadEmployeeChatMessages();
     }
 
     /* ------------------ تسجيل الخروج ------------------ */
