--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     <!-- زر الترجمة -->
     <button id="translateBtn">English</button>
     <!-- صورة شعار الموقع -->
-    <img class="login-logo" src="https://scontent.fjrs28-1.fna.fbcdn.net/v/t39.30808-6/471747354_122099892014715775_3226043878643219535_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=NY9kpH5dCp8Q7kNvgFjPcDR&_nc_oc=AdichrKT9DoTy28yGZ98KDYMDPVCdiRNCf4QOJNrytAGaTcWPZbmjYDbg35UHLHA4eU&_nc_zt=23&_nc_ht=scontent.fjrs28-1.fna&_nc_gid=AFWUQlD-1ziVp7La0qO1Gkw&oh=00_AYBjZ96CDyy3OoXa7Nlt4mAmwqF7vNSoFSWYjC_2Li8VrQ&oe=67C83B25" alt="شعار تسجيل الدخول">
+    <img class="login-logo" src="https://i.ibb.co/DfgPK26x/d3faeae71c55.jpg" alt="شعار تسجيل الدخول">
     <!-- العبارة بخط عربي مميز وتدرج لوني -->
     <p class="company-info">نظام حسابات Mulberry Company في فلسطين</p>
     <h2>تسجيل الدخول</h2>
